<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Makač</string>
    <string name="action_settings">Settings</string>
    <string name="Duration">Duration</string>
    <string name="Distance">Distance</string>
    <string name="Calories">Calories</string>
    <string name="Pace">Pace</string>
    <string name="Start">Start</string>
    <string name="Pause">Pause</string>
    <string name="Resume">Resume</string>
    <string name="Reset">Reset</string>
    <string name="time">00:00:0</string>
    <string name="stop">Stop</string>
    <string name="back">Back</string>
    <string name="share">Share Results</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="hello_world">AHOJ</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_intent_demo">IntentDemo</string>
    <string name="title_activity_intent_demo1">IntentDemo1</string>
    <string name="title_activity_torch">Torch</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn Off</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_starting_point">StartingPoint</string>
    <string name="title_activity_text_play">TextPlay</string>
    <string name="title_activity_email">Email</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_sqlite">SQLite</string>
    <string name="title_activity_stepbystep">Step</string>

</resources>
