<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sk.tuke.smart.TrackerActivity" >


    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150sp"
        android:height="50sp"
        android:text="@string/Distance" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:height="50sp"
        android:text="@string/Duration" />

    <TextView
        android:id="@+id/calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_marginLeft="150sp"
		android:layout_marginTop="250sp"
        android:height="25sp"
        android:text="@string/Calories" />

    <TextView
        android:id="@+id/pace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250sp"
        android:height="25sp"
        android:text="@string/Pace" />
    
    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:layout_marginTop="90sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="350sp"
        android:height="12sp"
        android:text="@string/Pause" />

    <Button
        android:id="@+id/resume_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130sp"
        android:layout_marginTop="350sp"
        android:height="12sp"
        android:text="@string/Resume" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="215sp"
        android:layout_marginTop="350sp"
        android:height="12sp"
        android:text="@string/Reset" />
    
    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350sp"
        android:height="12sp"
        android:text="@string/Start" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="390sp"
        android:layout_marginLeft="90sp"
        android:height="12sp"
        android:text="@string/stop" />
    
    <TextView
    android:id="@+id/distanceTextView"
    android:textSize="48sp"
    android:hint="No distance"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="@android:color/holo_blue_dark"
    />

</RelativeLayout>
